# scanorama-desktop

./: .gitignore  LICENSE  README.de.md  README.md  pyproject.toml  scanorama-studio.spec
.github/workflows/: ci.yml
docs/dev/: DECISIONS.md  INTERVIEW.md  PLAN.md  ROADMAP.md  STATUS.md
scripts/: run_studio.py
studio/: __init__.py  app.py  cli.py
studio/core/: __init__.py  calibrate.py  cloud.py  colorize.py  export.py  filters.py  floor.py  fusion.py  legacy.py  msproject.py  overlay.py  photos.py  pipeline.py  project.py  rawscan.py  registration.py  transfer.py  transform.py
studio/ui/: __init__.py  i18n.py  mainwindow.py  panels.py  photo_overlay.py  tools.py  transfer_dialog.py  workers.py
studio/ui/translations/: en.qm  en.ts
studio/ui/viewer/: __init__.py  camera.py  colors.py  picking.py  widget.py
tests/: conftest.py  test_calibrate.py  test_colorize.py  test_export.py  test_filters.py  test_floor.py  test_legacy.py  test_overlay.py  test_photos.py  test_pipeline.py  test_project.py  test_rawscan.py  test_registration.py  test_tools.py  test_transfer.py  test_transform.py  test_ui_registration.py  test_ui_shell.py  test_viewer_gl.py  test_viewer_math.py
