[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scanorama-studio"
version = "0.1.8"
description = "Scanorama Studio — Desktop-Auswertung für den scanorama 3D-LiDAR-Scanner / desktop processing for the scanorama 3D LiDAR scanner"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "ferengi82" }]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scanorama @ git+https://github.com/ferengi82/scanorama.git",
    "open3d>=0.18",
    "laspy[lazrs]>=2.5",
    "pye57>=0.4",
    "paramiko>=3.0",
    "PySide6>=6.6",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-qt>=4"]

[project.scripts]
scanorama-studio-cli = "studio.cli:main"

[project.gui-scripts]
scanorama-studio = "studio.app:main"

[project.urls]
Repository = "https://github.com/ferengi82/scanorama-desktop"

[tool.setuptools.packages.find]
include = ["studio*"]

[tool.setuptools.package-data]
studio = ["ui/translations/*.qm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
